src/objects/Glxy_ReimbursableWorkAuthorization__c.object
<CustomObject>
    <description>This table contains information about services requested by a tenant that are above the standard level identified in the lease.</description>
    <fields>
        <fullName>ABCodeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Code Name</label>
        <referenceTo>PBS_AB_Code__c</referenceTo>
        <relationshipLabel>Reimbursable Services</relationshipLabel>
        <relationshipName>Reimbursable_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ABCode__c</fullName>
        <formula>ABCodeName__r.AB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASA__c</fullName>
        <label>ASA Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUG_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acceptance620Date__c</fullName>
        <inlineHelpText>Date 620 approve/forwarded to R7</inlineHelpText>
        <label>Date RWA to R7</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgencyBureauName__c</fullName>
        <formula>ABCodeName__r.Agency_Bureau_Short_Name__c</formula>
        <label>Agency Bureau Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DEC_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DEC_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EffectiveDateFY__c</fullName>
        <formula>Text(YEAR( EffectiveDate__c + 92 ))</formula>
        <label>Effective Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEB_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FEB_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_IA__c</fullName>
        <label>FY Obligation IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_NOA__c</fullName>
        <label>FY Obligation NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Obligation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FunctionCode__c</fullName>
        <label>Function Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(RegionCD__c==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JAN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Region specified in search is outside your region.</errorMessage>
            <filterItems>
                <field>Glxy_Lease__c.RegionCD__c</field>
                <operation>equals</operation>
                <valueField>$User.Glxy_Region_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Glxy_Region_Code__c</field>
                <operation>equals</operation>
                <value>CO</value>
            </filterItems>
            <infoMessage>Leases in this list Limited to your Region</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipLabel>Reimbursable Services</relationshipLabel>
        <relationshipName>RWAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MAR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOA_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOV_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOV_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProcessedDateFY__c</fullName>
        <formula>Text(YEAR(ProcessedDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <inlineHelpText>Date completed</inlineHelpText>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RealtySpecialist__c</fullName>
        <formula>LeaseNumber__r.RealtySpecialist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Realty Specialist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCD__c</fullName>
        <formula>TEXT(LeaseNumber__r.RegionCD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEP_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StatusCd__c</fullName>
        <inlineHelpText>&quot;Actual&quot; or &quot;Estimate&quot;</inlineHelpText>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <formula>LeaseNumber__r.TeamCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Code</label>
        <type>Text</type>
    </fields>
    <label>Reimbursable Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LeaseNumber__c</columns>
        <columns>RegionCD__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Amount__c</columns>
        <columns>TeamCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Region_s_RWA</fullName>
        <columns>NAME</columns>
        <columns>LeaseNumber__c</columns>
        <columns>RegionCD__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Amount__c</columns>
        <columns>TeamCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>My Region&apos;s RWA</label>
    </listViews>
    <nameField>
        <label>RWA Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reimbursable Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SumOfNOAandIA</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(NOA_Sq_Ft__c &lt;&gt;0, IA_Sq_Ft__c&lt;&gt;0,LeaseNumber__r.BaseSquareFeet__c&lt;&gt;0),
NOA_Sq_Ft__c +  IA_Sq_Ft__c &gt; LeaseNumber__r.BaseSquareFeet__c,FALSE)</errorConditionFormula>
        <errorMessage>Sum of NOA and IA Sq. Ft. cannot exceed the total square feet of the Lease.</errorMessage>
    </validationRules>
</CustomObject>